Add extra items to grid and change bg colour

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         <div class="grid-item"></div>
         <div class="grid-item"></div>
         <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
+        <div class="grid-item"></div>
     </div>
 </body>
 </html>
