--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" /> 
 </head>
 <body>
+    <div class="display">3.14159265359</div>
     <div class="grid-container">
         <div class="grid-item">AC</div>
         <div class="grid-item">+/-</div>
