--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="grid-item">3</div>
         <div class="grid-item">+</div>
         <div class="grid-item">0</div>
-        <div class="grid-item">></div>
+        <div class="grid-item">CLEAR</div>
         <div class="grid-item">.</div>
         <div class="grid-item">=</div>
     </div>
