--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css" /> 
 </head>
 <body>
-    <div class="display">3.14159265359</div>
+    <div id="display" class="display">0</div>
     <div class="grid-container">
         <div class="grid-item">AC</div>
         <div class="grid-item">+/-</div>
@@ -21,14 +21,15 @@
         <div class="grid-item">5</div>
         <div class="grid-item">6</div>
         <div class="grid-item">-</div>
-        <div class="grid-item">1</div>
+        <div class="grid-item" data-value="1">1</div>
         <div class="grid-item">2</div>
         <div class="grid-item">3</div>
         <div class="grid-item">+</div>
-        <div class="grid-item">0</div>
+        <div class="grid-item" data-value="0">0</div>
         <div class="grid-item">CLEAR</div>
         <div class="grid-item">.</div>
         <div class="grid-item">=</div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
