--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
         <div class="grid-item">+/-</div>
         <div class="grid-item">%</div>
         <div class="grid-item">÷</div>
-        <div class="grid-item">7</div>
-        <div class="grid-item">8</div>
-        <div class="grid-item">9</div>
+        <div class="grid-item" data-value="7">7</div>
+        <div class="grid-item" data-value="8">8</div>
+        <div class="grid-item" data-value="9">9</div>
         <div class="grid-item">X</div>
-        <div class="grid-item">4</div>
-        <div class="grid-item">5</div>
-        <div class="grid-item">6</div>
+        <div class="grid-item" data-value="4">4</div>
+        <div class="grid-item" data-value="5">5</div>
+        <div class="grid-item" data-value="6">6</div>
         <div class="grid-item">-</div>
         <div class="grid-item" data-value="1">1</div>
-        <div class="grid-item">2</div>
-        <div class="grid-item">3</div>
+        <div class="grid-item" data-value="4">2</div>
+        <div class="grid-item" data-value="3">3</div>
         <div class="grid-item">+</div>
         <div class="grid-item" data-value="0">0</div>
         <div class="grid-item">CLEAR</div>
-        <div class="grid-item">.</div>
+        <div class="grid-item" data-value=".">.</div>
         <div class="grid-item">=</div>
     </div>
     <script src="script.js"></script>
