--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="grid-item" data-value="3">3</div>
         <div class="grid-item">+</div>
         <div class="grid-item" data-value="0">0</div>
-        <div class="grid-item">CLEAR</div>
+        <div class="grid-item" data-value="CLEAR">CLEAR</div>
         <div class="grid-item" data-value=".">.</div>
         <div class="grid-item">=</div>
     </div>
