--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
         <div class="grid-item">AC</div>
         <div class="grid-item">+/-</div>
         <div class="grid-item">%</div>
-        <div class="grid-item">÷</div>
+        <div class="grid-item" data-value="÷">÷</div>
         <div class="grid-item" data-value="7">7</div>
         <div class="grid-item" data-value="8">8</div>
         <div class="grid-item" data-value="9">9</div>
-        <div class="grid-item">X</div>
+        <div class="grid-item" data-value="X">X</div>
         <div class="grid-item" data-value="4">4</div>
         <div class="grid-item" data-value="5">5</div>
         <div class="grid-item" data-value="6">6</div>
-        <div class="grid-item">-</div>
+        <div class="grid-item" data-value="-">-</div>
         <div class="grid-item" data-value="1">1</div>
         <div class="grid-item" data-value="2">2</div>
         <div class="grid-item" data-value="3">3</div>
-        <div class="grid-item">+</div>
+        <div class="grid-item" data-value="+">+</div>
         <div class="grid-item" data-value="0">0</div>
         <div class="grid-item" data-value="CLEAR">CLEAR</div>
         <div class="grid-item" data-value=".">.</div>
-        <div class="grid-item">=</div>
+        <div class="grid-item" data-value="=">=</div>
     </div>
     <script src="script.js"></script>
 </body>
