Add blank data values to make certain buttons do nothing for now

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <div id="display" class="display">0</div>
     <div class="grid-container">
-        <div class="grid-item">AC</div>
-        <div class="grid-item">+/-</div>
-        <div class="grid-item">%</div>
+        <div class="grid-item" data-value="">AC</div>
+        <div class="grid-item" data-value="">+/-</div>
+        <div class="grid-item" data-value="">%</div>
         <div class="grid-item" data-value="÷">÷</div>
         <div class="grid-item" data-value="7">7</div>
         <div class="grid-item" data-value="8">8</div>
