--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="display" class="display">0</div>
     <div class="grid-container">
-        <div class="grid-item" data-value="">AC</div>
+        <div class="grid-item" data-value="">DEL</div>
         <div class="grid-item" data-value="">+/-</div>
         <div class="grid-item" data-value="">%</div>
         <div class="grid-item" data-value="÷">÷</div>
